--- a/ordering_process/pubspec.yaml
+++ b/ordering_process/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +41,8 @@ dependencies:
   fluttertoast: ^8.2.1
   provider: ^6.0.5
   group_button: ^5.2.2
+  intl_utils: ^2.8.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -92,3 +96,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
